--- a/lorem.html
+++ b/lorem.html
@@ -45,17 +45,17 @@
         </div>
       </div>
     </div>
+    <h1 class="class-headline-booking">BOOKING</h1>
 
-    <div class="content-wrapper">
-      <div class="two-column-wrapper">
-        <div class="profile-image-wrapper">
-          <img src="images/isabella2.jpg" alt="">
+    <div class="content-wrapper-booking">
+      <div class="two-column-wrapper-booking">
+        <div class="profile-image-wrapper-booking">
+          <img src="" alt="">
         </div>
 
-        <div class="profile-content-wrapper">
-          <h1>Hi, thanks for visiting my site.</h1>
-          <p>This is my first website that i really enjoyed doing. It was a bit tricky but the result are beautiful. I am a first year
-              Java developer student in Sweden and i am 22 years old.
+        <div class="profile-content-wrapper-booking">
+          <h1></h1>
+          <p>
           </p>
 
           <p>5</p>
