--- a/prices.html
+++ b/prices.html
@@ -46,14 +46,16 @@
         </div>
       </div>
     </div>
+    <h1 class="class-headline">PRICELIST</h1>
+  </div>
 
     <div class="content-wrapper">
-      <div class="two-column-wrapper">
-        <div class="profile-image-wrapper">
+      <div class="two-column-prices">
+        <div class="profile-image-wrapper-prices">
           <img src="images/unnamed.jpg" alt="">
         </div>
 
-        <div class="profile-content-wrapper">
+        <div class="profile-content-wrapper-prices">
           
 
           <p>4</p>
