--- a/socialmedia.html
+++ b/socialmedia.html
@@ -45,25 +45,28 @@
         </div>
       </div>
     </div>
+    <h1 class="class-headline-socials">WHERE TO FIND ME</h1>
 
-    <div class="content-wrapper">
-      <div class="two-column-wrapper">
-        <div class="profile-image-wrapper">
-          <img src="images/isabella2.jpg" alt="">
+    <div class="content-wrapper-socials">
+      <div class="two-column-wrapper-socials">
+        <div class="profile-image-wrapper-socials">
+          <img src="" alt="">
         </div>
 
         <div class="profile-content-wrapper">
-          <h1>Hi, thanks for visiting my site.</h1>
-          <p>This is my first website that i really enjoyed doing. It was a bit tricky but the result are beautiful. I am a first year
-              Java developer student in Sweden and i am 22 years old.
-          </p>
+          <h1></h1>
+          <p> </p>
 
           <p>6</p>
         </div>
+
+        
       </div>
     </div>
   </div>
 
 </body>
+
+
 
 </html>
