--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </div>
 
               <div class="nav-link-wrapper active-nav-link">
-                <a href="socialmedia.html">Social medias</a>
+                <a href="socialmedia.html">Social media</a>
               </div>
 
       </div>
