--- a/prices.html
+++ b/prices.html
@@ -34,7 +34,7 @@
                       </div>
         
                       <div class="nav-link-wrapper active-nav-link">
-                        <a href="socialmedia.html">Social medias</a>
+                        <a href="socialmedia.html">Social media</a>
                       </div>
   
   
@@ -46,13 +46,13 @@
         </div>
       </div>
     </div>
-    <h1 class="class-headline">PRICELIST</h1>
+    <h1 class="class-headline">PRICES</h1>
   </div>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper-prices">
       <div class="two-column-prices">
         <div class="profile-image-wrapper-prices">
-          <img src="images/unnamed.jpg" alt="">
+          <img src="images/prislistanyyyyyyyyyyyy.jpg" alt="">
         </div>
 
         <div class="profile-content-wrapper-prices">
