--- a/socialmedia.html
+++ b/socialmedia.html
@@ -33,7 +33,7 @@
               </div>
 
               <div class="nav-link-wrapper active-nav-link">
-                <a href="socialmedia.html">Social medias</a>
+                <a href="socialmedia.html">Social media</a>
               </div>
   
   
@@ -50,7 +50,7 @@
     <div class="content-wrapper-socials">
       <div class="two-column-wrapper-socials">
         <div class="profile-image-wrapper-socials">
-          <img src="" alt="">
+          <img src="images/bildosociiiial.jpg.png" alt="">
         </div>
 
         <div class="profile-content-wrapper">
