--- a/mywoork.html
+++ b/mywoork.html
@@ -33,7 +33,7 @@
               </div>
 
               <div class="nav-link-wrapper active-nav-link">
-                <a href="socialmedia.html">Social medias</a>
+                <a href="socialmedia.html">Social media</a>
               </div>
   
   
