--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>Portfolio Homepage</title>
+  <title>Homepage</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   
@@ -18,7 +18,7 @@
         </div>
 
        
-        <div class="nav-link-wrapper active-nav-link">
+        <div class="nav-link-wrapper active-nav-link ">
             <a href="about.html">About me</a>
           </div>
   
