--- a/socialmedia.html
+++ b/socialmedia.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>Portfolio Homepage</title>
+  <title>socialmedia</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,8 +12,10 @@
   <div class="container">
     <div class="nav-wrapper">
       <div class="left-side">
-        <div class="nav-link-wrapper">
+        <div class="nav-link-wrapper active-nav-link">
+
           <a href="index.html">Home</a>
+        
         </div>
 
         <div class="nav-link-wrapper active-nav-link">
@@ -50,14 +52,14 @@
     <div class="content-wrapper-socials">
       <div class="two-column-wrapper-socials">
         <div class="profile-image-wrapper-socials">
-          <img src="images/bildosociiiial.jpg.png" alt="">
+          <img src="images/imagesocial55555.jpg.png" alt="">
         </div>
 
         <div class="profile-content-wrapper">
           <h1></h1>
           <p> </p>
 
-          <p>6</p>
+          <p></p>
         </div>
 
         
