--- a/mywoork.html
+++ b/mywoork.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>Portfolio Homepage</title>
+  <title>My Work</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="nav-wrapper">
       <div class="left-side">
-        <div class="nav-link-wrapper">
+        <div class="nav-link-wrapper active-nav-link">
           <a href="index.html">Home</a>
         </div>
 
@@ -56,10 +56,10 @@
 
         <div class="profile-content-wrapper-mywork">
           <h1></h1>
-          <p>T
+          <p>
           </p>
 
-          <p>3</p>
+          <p></p>
         </div>
         <div class="content-wrapper">
           <div class="portfolio-items-wrapper">
