--- a/prices.html
+++ b/prices.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='UTF-8'>
-  <title>Homepage</title>
+  <title>Prices</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="nav-wrapper">
       <div class="left-side">
-        <div class="nav-link-wrapper">
+        <div class="nav-link-wrapper active-nav-link">
           <a href="index.html">Home</a>
         </div>
         
