--- a/mywoork.html
+++ b/mywoork.html
@@ -156,4 +156,20 @@
 
 </script>
 
+
+<section>
+  <h1></h1>
+  <h3></h3>
+</section>
+<div class="footer">
+  <div id="button"></div>
+<div id="container">
+<div id="cont">
+<div class="footer_center">
+	   <h3>PICKY LASHES</h3>
+</div>
+</div>
+</div>
+</div>
+
 </html>
