--- a/about.html
+++ b/about.html
@@ -73,6 +73,21 @@
         
         
       </div>
+
+      <section>
+        <h1></h1>
+        <h3></h3>
+      </section>
+      <div class="footer">
+        <div id="button"></div>
+      <div id="container">
+      <div id="cont">
+      <div class="footer_center">
+           <h3>PICKY LASHES</h3>
+      </div>
+      </div>
+      </div>
+      </div>
     </div>
   </div>
 
