--- a/prices.html
+++ b/prices.html
@@ -58,7 +58,22 @@
         <div class="profile-content-wrapper-prices">
           
 
-          <p>4</p>
+          <p></p>
+        </div>
+
+        <section>
+          <h1></h1>
+          <h3></h3>
+        </section>
+        <div class="footer">
+          <div id="button"></div>
+        <div id="container">
+        <div id="cont">
+        <div class="footer_center">
+             <h3>PICKY LASHES</h3>
+        </div>
+        </div>
+        </div>
         </div>
       </div>
     </div>
